syntax = "proto3";

package midka_pb;



message NumberRequest{
  int32 number = 1;
}

message NumberResponse{
  int32 result = 1;
}

message AverageResponse {
  double result = 1;
}

service CalculatorService {
  rpc PrimeNumberDecomposition(NumberRequest) returns (stream NumberResponse);
  rpc ComputerAverage(stream NumberRequest) returns (AverageResponse);
}



